Sat Apr 30 21:11:08 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_plus): Define Integer#+.

	* bignum.c (rb_big_plus): Don't define Bignum#+.

Sat Apr 30 21:01:20 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_minus): Define Integer#-.

	* bignum.c (rb_big_minus): Don't define Bignum#-.

Sat Apr 30 20:53:33 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_mul): Define Integer#*.

	* bignum.c (rb_big_mul): Don't define Bignum#*.

Sat Apr 30 20:30:44 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_modulo): Define Integer#%.

	* bignum.c (rb_big_modulo): Don't define Bignum#%.

Sat Apr 30 20:17:08 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_equal): Define Integer#==.

	* bignum.c (rb_big_eq): Don't define Bignum#==.

Sat Apr 30 19:41:15 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_gt): Define Integer#>.

	* bignum.c (rb_big_gt): Don't define Bignum#>.
	  Renamed from big_gt.

	* internal.h (rb_big_gt): Declared.

Sat Apr 30 19:24:40 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_ge): Define Integer#>=.

	* bignum.c (rb_big_ge): Don't define Bignum#>=.
	  Renamed from big_ge.

	* internal.h (rb_big_ge): Declared.

Sat Apr 30 19:20:40 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/standard_library.rdoc: Remove obsoleted classes and modules.

Sat Apr 30 19:09:23 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_lt): Define Integer#<.

	* bignum.c (rb_big_lt): Don't define Bignum#<.
	  Renamed from big_lt.

	* internal.h (rb_big_lt): Declared.

Sat Apr 30 18:44:05 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_le): Define Integer#<=.

	* bignum.c (rb_big_le): Don't define Bignum#<=.
	  Renamed from big_le.

	* internal.h (rb_big_le): Declared.

Sat Apr 30 18:11:44 2016  Tanaka Akira  <akr@fsij.org>

	* bignum.c (Init_Bignum): Define Integer#GMP_VERSION.

Sat Apr 30 16:58:18 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_remainder): Define Integer#remainder.
